kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
metadata:
  name: tutorial-deploy-production
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    cert-manager.io/cluster-issuer: letsencrypt-prod3
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  rules:
    - host: aoo.respondeai.com.br
      http:
        paths:
          - backend:
              serviceName: deploy-tutorial-production-deployment-nodeport
              servicePort: 80
            path: /
  tls:
    - hosts:
        - aoo.respondeai.com.br
      secretName: tutorial-deploy-production-us3-certmanager-certificate
